Incluir roi_selector.py en el repositorio
- Añadido roi_selector.py a las excepciones del .gitignore
- Archivo roi_selector.py ahora incluido en el repositorio

--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,7 @@
 !captura_video.py
 !info.txt
 !parqueadero.py
+!roi_selector.py
 !.gitignore
 
 # Ignorar directorios comunes pero permitir los archivos específicos
